# pipelin3r

./: .gitignore  .jscpd.json  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  GUARDRAIL3_GUIDE.md  LICENSE  ROUNDTRIP_TEST.md  cliff.toml  clippy.toml  deny.toml  guardrail3.toml  release-plz.toml
.claude/: settings.json
.githooks/: pre-commit
.plans/: 2026-03-15-122559-extract-limit3r.md  2026-03-15-124019-extract-shedul3r-sdk.md  2026-03-15-124615-extract-pipelin3r-package.md  2026-03-15-125726-implement-everything.md  2026-03-15-125825-limit3r-tests-shedul3r-rename.md  2026-03-15-125831-bundle-endpoints.md  2026-03-15-125849-agent-batch-model-enums.md  2026-03-15-130701-sdk-bundle-client-remote-execution.md  2026-03-15-130718-setup-project-docs-ci.md  2026-03-15-131556-transform-builder-and-integration.md  2026-03-15-132336-setup-release-plz.md  2026-03-15-132405-toml-model-config.md  2026-03-15-134042-fix-adversarial-findings.md  2026-03-15-134153-fix-shedul3r-adversarial-findings.md  2026-03-15-134216-fix-limit3r-adversarial-findings.md  2026-03-15-134301-fix-adversarial-review-findings.md  2026-03-15-160038-crates-io-publish-readiness.md  2026-03-15-161918-code-quality-fixes.md  2026-03-15-163832-fix-eviction-logic.md  2026-03-15-171202-fix-all-adversarial-v2.md  2026-03-15-171337-fix-limit3r-shedul3r-batch1.md  2026-03-15-171358-fix-shedul3r-batch2.md  2026-03-15-171414-fix-shedul3r-rs-sdk-batch3.md  2026-03-15-171435-fix-pipelin3r-batch4.md  2026-03-15-172444-regression-tests.md  2026-03-15-172448-regression-tests.md  2026-03-15-173017-adversarial-fixes.md  2026-03-15-193726-mutant-kill-tests.md  2026-03-15-193750-mutant-kill-tests.md  2026-03-15-195437-kill-remaining-mutants.md  2026-03-15-195608-kill-mutants.md  2026-03-15-201424-configurable-max-tracked-keys.md  2026-03-16-095732-fix-release-workflows.md  2026-03-16-135146-axum-to-actix-migration.md  2026-03-16-141406-mcp-transport.md  2026-03-16-210945-mcp-docs.md  2026-03-17-095334-fix-guardrail3-shedul3r-rs-sdk.md  2026-03-17-095405-fix-guardrail3-violations.md  2026-03-17-151543-pipelin3r-workdir-redesign.md  (+59 more)
.worklogs/: 2026-03-15-202857-cleanup.md  (+81 more)
apps/f3tch/: Cargo.toml
apps/f3tch/src/: main.rs
apps/shedul3r/: CLAUDE.md  Cargo.toml  MCP.md  clippy.toml  deny.toml  rustfmt.toml
apps/shedul3r/crates/adapters/inbound/api/: Cargo.toml
apps/shedul3r/crates/adapters/inbound/api/src/: auth.rs  cli.rs  error.rs  extractors.rs  lib.rs  main.rs  state.rs
apps/shedul3r/crates/adapters/inbound/api/src/handlers/: bundles.rs  mod.rs  tasks.rs
apps/shedul3r/crates/adapters/inbound/mcp/: Cargo.toml  clippy.toml
apps/shedul3r/crates/adapters/inbound/mcp/src/: lib.rs  server.rs  service.rs
apps/shedul3r/crates/adapters/inbound/rest/: Cargo.toml
apps/shedul3r/crates/adapters/inbound/rest/src/: auth.rs  error.rs  extractors.rs  fs.rs  lib.rs  main.rs  state.rs
apps/shedul3r/crates/adapters/inbound/rest/src/auth/: mod.rs  tests.rs
apps/shedul3r/crates/adapters/inbound/rest/src/cli/: mod.rs  tests.rs
apps/shedul3r/crates/adapters/inbound/rest/src/handlers/: async_tasks.rs  bundles.rs  mod.rs  tasks.rs
apps/shedul3r/crates/adapters/inbound/rest/src/handlers/bundles/: mod.rs  tests.rs
apps/shedul3r/crates/adapters/inbound/rest/tests/: adversarial_async_task.rs
apps/shedul3r/crates/adapters/outbound/db/: Cargo.toml  clippy.toml
apps/shedul3r/crates/adapters/outbound/db/src/: bulkhead.rs  circuit_breaker.rs  lib.rs  rate_limiter.rs  retry.rs  tests.rs
apps/shedul3r/crates/adapters/outbound/subprocess/: Cargo.toml  clippy.toml
apps/shedul3r/crates/adapters/outbound/subprocess/src/: lib.rs  tests.rs
apps/shedul3r/crates/app/commands/: Cargo.toml  clippy.toml
apps/shedul3r/crates/app/commands/src/: execute.rs  lib.rs  parser.rs
apps/shedul3r/crates/app/commands/src/execute/: mod.rs  tests.rs
apps/shedul3r/crates/app/commands/src/parser/: mod.rs  tests.rs
apps/shedul3r/crates/domain/types/: Cargo.toml  clippy.toml
apps/shedul3r/crates/domain/types/src/: async_task.rs  config.rs  duration_serde.rs  error.rs  lib.rs  request.rs  subprocess.rs  task.rs
apps/shedul3r/crates/ports/outbound/repo/: Cargo.toml  clippy.toml
apps/shedul3r/crates/ports/outbound/repo/src/: lib.rs
apps/t3str/: CLAUDE.md  Cargo.toml  clippy.toml  deny.toml  rustfmt.toml
apps/t3str/.plans/: 2026-03-20-100219-junit-xml-parser.md  2026-03-20-100249-json-parsers.md  2026-03-20-101351-run-adapter-executors.md  2026-03-20-101410-language-executors.md
apps/t3str/crates/adapters/inbound/cli/: Cargo.toml  clippy.toml
apps/t3str/crates/adapters/inbound/cli/src/: main.rs
apps/t3str/crates/adapters/outbound/extract/: Cargo.toml  clippy.toml
apps/t3str/crates/adapters/outbound/extract/src/: csharp.rs  csharp_tests.rs  elixir.rs  elixir_tests.rs  fs.rs  go.rs  go_tests.rs  helpers.rs  helpers_tests.rs  java.rs  java_tests.rs  javascript.rs  javascript_tests.rs  lib.rs  php.rs  php_tests.rs  python.rs  python_tests.rs  ruby.rs  ruby_tests.rs  rust_lang.rs  rust_lang_tests.rs
apps/t3str/crates/adapters/outbound/run/: Cargo.toml  clippy.toml
apps/t3str/crates/adapters/outbound/run/src/: csharp.rs  elixir.rs  go.rs  helpers.rs  helpers_tests.rs  java.rs  javascript.rs  lib.rs  php.rs  python.rs  ruby.rs  rust_lang.rs
apps/t3str/crates/adapters/outbound/run/src/parsers/: cargo_text.rs  cargo_text_tests.rs  dotnet_stdout.rs  dotnet_stdout_tests.rs  go_json.rs  go_json_tests.rs  jest_json.rs  jest_json_tests.rs  junit_xml.rs  junit_xml_tests.rs  mix_text.rs  mix_text_tests.rs  mocha_text.rs  mocha_text_tests.rs  mod.rs  mod_tests.rs  nette_text.rs  nette_text_tests.rs  rspec_json.rs  rspec_json_tests.rs
apps/t3str/crates/app/commands/: Cargo.toml  clippy.toml
apps/t3str/crates/app/commands/src/: extract.rs  lib.rs  run.rs
apps/t3str/crates/domain/types/: Cargo.toml  clippy.toml
apps/t3str/crates/domain/types/src/: error.rs  language.rs  lib.rs  test_file.rs  test_result.rs  test_suite.rs
apps/t3str/crates/ports/outbound/discovery/: Cargo.toml  clippy.toml
apps/t3str/crates/ports/outbound/discovery/src/: lib.rs
(+70 files in other folders)
