# Root workspace for published packages.
# The shedul3r app has its own workspace at apps/shedul3r/Cargo.toml.
[workspace]
members = [
    "packages/limit3r",
    "packages/shedul3r-rs-sdk",
    "packages/pipelin3r",
    "packages/shedul3r-bin",
]
exclude = ["apps/shedul3r"]
resolver = "2"

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "forbid"
dead_code = "deny"
unused_results = "deny"
unused_crate_dependencies = "deny"
missing_docs = "deny"
missing_debug_implementations = "warn" # TODO: set to "warn" after adding Debug derives to all public types

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
indexing_slicing = "deny"
string_slice = "deny"
arithmetic_side_effects = "deny"
shadow_unrelated = "deny"
missing_assert_message = "deny"
as_conversions = "deny"
float_cmp = "deny"
str_to_string = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
redundant_else = "deny"
wildcard_enum_match_arm = "deny"
rest_pat_in_fully_bound_structs = "deny"
large_stack_arrays = "deny"
large_futures = "deny"
semicolon_if_nothing_returned = "deny"
redundant_closure_for_method_calls = "deny"
map_unwrap_or = "deny"
verbose_file_reads = "deny"
lossy_float_literal = "deny"
partial_pub_fields = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
option_if_let_else = "allow"
empty_line_after_doc_comments = "allow"
single_match_else = "allow"
ref_option_ref = "allow"
trivially_copy_pass_by_ref = "allow"
multiple_crate_versions = "allow"
