[package]
name = "f3tch"
version = "0.1.0"
edition = "2021"
description = "Concurrent file fetcher for parser and content development workflows"
license = "MIT"
repository = "https://github.com/websmasher/pipelin3r"

[workspace]

[[bin]]
name = "f3tch"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
infer = "0.16"
