[package]
name = "commands"
version.workspace = true
description = "Application use cases — business logic orchestration"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
domain-types = { path = "../../domain/types" }
repo = { path = "../../ports/outbound/repo" }
serde_yaml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
