[package]
name = "commands"
version.workspace = true
description = "Application use cases — business logic orchestration"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
repository = "https://github.com/3jane/pipelin3r"
publish.workspace = true

[lints]
workspace = true

[dependencies]
domain-types = { path = "../../domain/types" }
limit3r = { path = "../../../../../packages/limit3r" }
repo = { path = "../../ports/outbound/repo" }
serde_yaml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
