[package]
name = "domain-types"
version.workspace = true
description = "Domain types, entities, value objects, and errors"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
limit3r = { path = "../../../../../packages/limit3r" }
serde = { workspace = true }
thiserror = { workspace = true }
