[package]
name = "domain-types"
version.workspace = true
description = "Domain types, entities, value objects, and errors"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
repository = "https://github.com/3jane/pipelin3r"
publish.workspace = true

[lints]
workspace = true

[dependencies]
limit3r = { path = "../../../../../packages/limit3r" }
serde = { workspace = true }
thiserror = { workspace = true }
