[package]
name = "t3str-domain-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Domain types for t3str test discovery and execution"
license = "MIT"
repository = "https://github.com/ArtOfContext/pipelin3r"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
