[package]
name = "mcp"
version.workspace = true
description = "Inbound adapter — MCP (Model Context Protocol) transport"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
repository = "https://github.com/3jane/pipelin3r"
publish.workspace = true

[lints]
workspace = true

[dependencies]
domain-types = { path = "../../../domain/types" }
commands = { path = "../../../app/commands" }
subprocess = { path = "../../outbound/subprocess" }
state = { path = "../../outbound/db" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-util.workspace = true
axum.workspace = true
