[package]
name = "rest"
version.workspace = true
description = "Inbound adapter — actix-web HTTP API and CLI (composition root)"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "shedul3r"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
actix-multipart.workspace = true
futures-core.workspace = true
parking_lot.workspace = true
serde.workspace = true
tempfile.workspace = true
uuid.workspace = true
clap.workspace = true
domain-types = { path = "../../../domain/types" }
commands = { path = "../../../app/commands" }
subprocess = { path = "../../outbound/subprocess" }
state = { path = "../../outbound/db" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
actix-rt.workspace = true
