[package]
name = "state"
version.workspace = true
description = "Outbound adapter — in-memory state backend for rate limiting, circuit breaking, and bulkhead"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
limit3r = { path = "../../../../../../packages/limit3r" }
