[package]
name = "subprocess"
version.workspace = true
description = "Outbound adapter — subprocess execution via tokio::process"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
repository = "https://github.com/3jane/pipelin3r"
publish.workspace = true

[lints]
workspace = true

[dependencies]
domain-types = { path = "../../../domain/types" }
repo = { path = "../../../ports/outbound/repo" }
tokio = { workspace = true, features = ["process", "io-util", "time"] }
tracing.workspace = true
