[package]
name = "t3str-run"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Test runner execution and output parsing adapter for t3str"
license = "MIT"
repository = "https://github.com/ArtOfContext/pipelin3r"

[dependencies]
t3str-domain-types = { path = "../../../domain/types" }
t3str-discovery-port = { path = "../../../ports/outbound/discovery" }
quick-xml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
